Alignement corrections

--- a/css/sponsor.css
+++ b/css/sponsor.css
@@ -18,7 +18,7 @@
 }
 
 .sponbody{
-    background: url("../img/bg2.jpg");
+    background: url("../img/bgg.png");
     background-attachment : fixed;
     background-repeat: none;
     background-size: cover;
